[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/SmallGeneratorPanel/ValvePanel.gd" type="Script" id=1]
[ext_resource path="res://Entities/Alarm/Button Press.wav" type="AudioStream" id=2]
[ext_resource path="res://Entities/Control_Panel_3/Control Panel 3.glb" type="PackedScene" id=3]
[ext_resource path="res://Entities/SmallGeneratorPanel/Valves Sealing.wav" type="AudioStream" id=4]
[ext_resource path="res://Entities/Interactable/Interactable.tscn" type="PackedScene" id=5]

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Control Panel 3" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0 )

[node name="KinematicBody" parent="Control Panel 3" instance=ExtResource( 5 )]
transform = Transform( 50, 0, 0, 0, 40, 0, 0, 0, 10, 0, 0, 0 )
active = false

[node name="ButtonAudio" type="AudioStreamPlayer3D" parent="Control Panel 3"]
stream = ExtResource( 2 )

[node name="ValveAudio" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.38419e-07, 2.43366, -1.33478 )
stream = ExtResource( 4 )

[connection signal="object_interacted" from="Control Panel 3/KinematicBody" to="." method="_on_KinematicBody_object_interacted"]
